--- a/style.css
+++ b/style.css
@@ -364,6 +364,8 @@ footer {
     filter: drop-shadow(0 0 5px var(--primary-color));
     margin: 0;
     padding: 0;
+    border-radius: 10px;
+    border: 2px solid var(--primary-color);
 }
 
 .header-right {
